Fix expert bug on safari

--- a/cake2cribs/app/webroot/less/Expert/expert_page.less
+++ b/cake2cribs/app/webroot/less/Expert/expert_page.less
@@ -9,6 +9,11 @@ body
 		font-size: @font-size;
 		line-height: @font-size;
 	}
+	.main
+	{
+		position: relative;
+		z-index: 1;
+	}
 	.button
 	{
 		font-family: Gotham-Bold;
@@ -138,7 +143,7 @@ body
 	{
 		position: absolute;
 		width: 100%;
-		z-index: 1;
+		z-index: 2;
 
 		.navbar-inner
 		{
@@ -193,6 +198,7 @@ body
 	._fullscreen
 	{
 		min-height: 100vh;
+		position: relative;
 	}
 
 	#page_1
@@ -335,6 +341,7 @@ body
 	#expert_info
 	{
 		position: relative;
+		background-color: white;
 		.brand
 		{
 			display: inline-block;
@@ -495,7 +502,6 @@ body
 	#top_rentals
 	{
 		background-color: #fcb036;
-		margin-bottom: 220px;
 		.feature_img
 		{
 			@padding_width: 4px;
@@ -635,6 +641,10 @@ body
 			}
 		}
 	}
+	#gap
+	{
+		height: 220px;
+	}
 	footer
 	{
 		background-color: #373944;
@@ -643,7 +653,7 @@ body
 		bottom: 0;
 		left: 0;
 		right: 0;
-		z-index: -1;
+		z-index: 0;
 		height: 220px;
 		box-sizing: border-box;
 		-moz-box-sizing: border-box;
